# wkt-ai-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_protocol.py  ai_wav_cli.py  ai_ws.py  ai_ws_store.py  artifacts.py  asr.py  camera_chunk_upload.py  camera_idempotency.py  camera_upload_cli.py  chat_cli.py  compose.yaml  llm.py  local_text_ask_cli.py  main.py  museum.py  opus_packets.py  output_format.py  pipeline.py  pyproject.toml  requirements.txt  rop1.py  router.py  sessions.py  tools.py  tts.py  vision.py  vision_llm.py  wai1_protocol.py  wav_utils.py
.github/workflows/: ci.yml
data/artifacts/: black_glaze_blue_splash_tripod_washer.json  bronze_he_dragon_knob_lidded.json  denggong_gui.json  shuyao_chuilin_sheng_ding.json  yingguo_jade_eagle.json
data/museum/: pingdingshan_museum.json
docs/: ai-websocket.md  deployment.md
samples/camera/: README.md
tests/: test_ai_websocket.py  test_camera_chunk_upload.py  test_camera_upload.py  test_model_refresh.py  test_museum_knowledge.py  test_opus_upload.py  test_smoke.py  test_vision_anchors.py
